--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
 
 
 <section role="region" id="editor" class="page right">
-    <header>
-        <!-- Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) -->
-        <menu type="toolbar">
+    <!--<header>-->
+        <!--&lt;!&ndash; Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) &ndash;&gt;-->
+        <!--<menu type="toolbar">-->
 
-        </menu>
-        <h1 data-l10n-id="app-heading" class="exit-screen">
-            Editing
-        </h1>
-    </header>
+        <!--</menu>-->
+        <!--<h1 data-l10n-id="app-heading" class="exit-screen">-->
+            <!--Editing-->
+        <!--</h1>-->
+    <!--</header>-->
 
-    <canvas id="editor-main">
-    </canvas>
-    <section id="control-panel">
-
-
-    </section>
+    <div class="app-container">
+        <canvas id="editor-main">
+        </canvas>
+        <section id="control-panel">
+        </section>
+    </div>
 </section>
 </body>
 </html>
