--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <!-- End of side controls -->
                 <!--Tracks Setting-->
                 <div class="blueBackground hiddenElement" id="mu-settings-panel">
-                    <form>
+                    <form name="audioTrack">
                         <table>
                             <tbody>
                             <tr>
@@ -165,7 +165,7 @@
                                     <label>Volume</label>
                                 </td>
                                 <td>
-                                    <input name="vol" id="volume" max="5" min="1" type="range">
+                                    <input name="vol" id="volume" step="0.1" max="1" min="0" value="0.5" type="range">
                                 </td>
                                 <td>
                                     <button>
@@ -177,18 +177,19 @@
                                 <label>Balance</label>
                             </td>
                                 <td>
-                                    <input name="vol"  max="5" min="1" type="range">
+                                    <input name="bal" step="0.1" max="1" min="0" value="0.5" type="range">
                                 </td>
                             </tr>
 
 
                             <tr>
                                 <td>
-                                    <input name="type" value="Audio Track" type="radio">
+                                    <input name="type" value="audio" type="radio">
                                 </td>
                                 <td>
-                                    <select name="track">
+                                    <select name="track-selection">
                                         <option>Sound1</option>
+                                        <option>Bass Hit</option>
                                         <option>Sound2</option>
                                         <option>Sound3</option>
                                         <option>Sound4</option>
@@ -197,14 +198,25 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <input name="type" value="Recording" type="radio">
+                                    <input name="type" value="recording" type="radio">
                                 </td>
                                 <td>
-                                    <button>Hold to record</button>
+                                    <button name="record-choice">Hold to record</button>
                                 </td>
                                 <td>
-                                    <button>Play</button>
+                                    <button name="play-choice">Play</button>
                                 </td>
+                            <tr>
+
+                                <td>
+                                    <audio name="audio_preview" width="150" id="audio">
+                                        <source src="" type="audio/ogg">
+                                        <source src="" type="audio/mpeg">
+                                        Your browser does not support the audio tag.
+                                    </audio>
+
+                                </td>
+                            </tr>
                             </tr>
                             </tbody>
                         </table>
