restructuring files. Save paths

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script type="text/javascript" src="js/libs/Zepto.js" defer></script>
 
     <!--Code-->
+    <script type="text/javascript" src="js/classes/FIO.js" defer></script>
     <script type="text/javascript" src="js/classes/Track.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
 
