Audio selection, tracks and ui changes

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
                 </div>
                 <!--Side Tracks controls -->
-                <div id="side-controls" class="control-color-bg">
+                <div id="side-controls" class="control-gradient-bg">
                     <ul id="mu-list">
 
 
@@ -196,6 +196,11 @@
                                         <option>Sound4</option>
                                     </select>
                                 </td>
+                                <td>
+                                    <select name="track-category-selection">
+
+                                    </select>
+                                </td>
                             </tr>
                             <tr>
                                 <td>
@@ -210,8 +215,8 @@
                             <tr>
 
                                 <td>
-                                    <audio name="audio_preview" width="150" id="audio">
-                                        <source src="" type="audio/ogg">
+                                    <audio name="audio_preview" id="audio_preview" width="150" id="audio">
+                                        <source src="" type="audio/wav">
                                         <source src="" type="audio/mpeg">
                                         Your browser does not support the audio tag.
                                     </audio>
