--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script type="text/javascript" src="js/classes/Track.js" defer></script>
     <script type="text/javascript" src="js/app.js" defer></script>
 
+
     <!--
     The following two lines are for loading the localisations library
     and the localisation data-so people can use the app in their
@@ -54,7 +55,9 @@
     <link rel="stylesheet" type="text/css" href="css/seekbars.css"/>
     <link rel="stylesheet" type="text/css" href="css/input_areas.css"/>
     <link rel="stylesheet" type="text/css" href="css/buttons.css"/>
+    <link rel="stylesheet" type="text/css" href="css/.css"/>
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
+
 </head>
 <body>
 <div id="mainContainer">
@@ -156,6 +159,18 @@
                     </section>
                 </div>
                 <!-- End of side controls -->
+                <!--Hidden menu-->
+                <div id="menu-panel">
+                    <input type="text" name="file-name"/>
+                    <button>Number of spaces: 8</button>
+                    <button>Play speed: 0.3</button>
+
+                    <button>Save</button>
+                    <button>Open</button>
+                    <button>Open</button>
+
+
+                </div>
                 <!--Tracks Setting-->
                 <div class="blueBackground hiddenElement" id="mu-settings-panel">
                     <form name="audioTrack">
@@ -178,7 +193,7 @@
                                 <label>Balance</label>
                             </td>
                                 <td>
-                                    <input name="bal" step="0.1" max="1" min="0" value="0.5" type="range">
+                                    <input name="bal" step="0.1" max="1" min="-1" value="0" type="range">
                                 </td>
                             </tr>
 
