FIXED approach to saving. Fixed saving. ADD more work on loading functionality.

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     </div>
                     <div>
                         <button id="interval-toggle"></button>
-                        <label>Velocity <span id="velocity-label">0</span></label>
+                        <label>Velocity <span id="velocity-label">500ms</span></label>
                     </div>
                     <div class="clear"></div>
                     <div>
