ADD Setup for Localization, ADD Load function.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <link rel="stylesheet" type="text/css" href="css/seekbars.css"/>
     <link rel="stylesheet" type="text/css" href="css/input_areas.css"/>
     <link rel="stylesheet" type="text/css" href="css/buttons.css"/>
-    <link rel="stylesheet" type="text/css" href="css/.css"/>
+    <!--<link rel="stylesheet" type="text/css" href="css/.css"/>-->
     <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
 </head>
